  - Remove "Electronic Program Guide (EPG) Metadata" discovery intervals setting
  - Remove "Trigger guide metadata discovery" PVR Client Specific setting
  - Add "Trigger guide listing discovery" PVR Client Specific setting
  - Fix bug in task scheduler that would allow pending tasks to execute after stop signal has been sent

v2.4.2 (2019.12.05)
  - Add dependency on zlib library v1.2.11
  - Add "Use Original Air Date timestamp for Recorded TV programs" setting
  - Enable DEFLATE and GZIP encoding support for backend HTTP data requests
  - Adapt to backend EPG change allowing for more data to be returned per web request
  - Limit EPG data requests to no more than 23.5 hours into the future if no devices with DVR authorization where discovered

v2.4.1 (2019.11.13)
  - Update cURL library to version 7.67.0
  - Wait up to 10 seconds for IPv4 network connectivity before executing startup discovery tasks
  - (Linux/OSX) Wait up to one minute for IPv4 network connectivity before executing wakeup discovery tasks
  - Treat "Audio" Recorded TV category mapping as "Series"; avoids creation of "Audio" folder in Recorded TV

v2.4.0 (2019.11.01)
  - Update SQLite database engine to version 3.30.1
  - Enforce previously relaxed rules regarding invalid JSON data retrieved from the backend and/or local devices
  - Limit EPG data requests to no more than 24 hours into the future if no devices with DVR authorization where discovered
  - Refactor recordings database table to key on auto-generated recording identifier(s) and improve query performance
  - Improve performance of Recorded TV last played (resume) position operations
  - Display prompt indicating that an individual episode timer cannot be removed from a series recording rule
  - Trigger an automatic recording discovery to occur 15 seconds after a new recording rule has been added
  - Trigger initial discovery operations to occur after PVR Manager has been fully initialized and is requesting data